[package]
name = "cloud-latency"
version = "0.1.0"
authors = ["Brent Salisbury <brent.salisbury@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-ping = "0.3.0"
tokio = "0.1.22"
futures = "0.1.29"
dns-lookup = "1.0.1"
chrono = "0.4.10"
docopt = "1.1.0"
serde ="1.0.104"
serde_yaml ="0.8.11"
serde_derive = "1.0.104"